<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.bakingapp.com.example.android.fragments.RecipeDetailFragment"
    android:orientation="vertical">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >

       <TextView
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:fontFamily="@string/sans_serif"
           android:textColor="@color/primary_text"
           android:id="@+id/recipeIngredientdetails"/>

   </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_recipe_detail"/>


</LinearLayout>

