...
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoplayerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exoplayer_height"
        android:layout_marginTop="@dimen/exoplayer_marginTop"
        android:layout_marginRight="@dimen/exoplayer_marginRight"
        android:layout_marginBottom="@dimen/exoplayer_marginBottom"
        android:layout_marginLeft="@dimen/exoplayer_marginLeft"
...
